This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: os.cpu_count() returns wrong number of processors on specific systems
Type: behavior Stage: resolved
Components: Windows Versions: Python 3.9, Python 3.8
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: cheryl.sabella, eryksun, giampaolo.rodola, miss-islington, paul.moore, pitrou, steve.dower, tim.golden, yanirh, zach.ware
Priority: normal Keywords: patch

Created on 2018-03-28 09:44 by yanirh, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
Screenshot.png yanirh, 2018-03-28 12:19
Pull Requests
URL Status Linked Edit
PR 15949 merged steve.dower, 2019-09-11 13:47
PR 15979 merged miss-islington, 2019-09-11 15:15
Messages (20)
msg314580 - (view) Author: yanir hainick (yanirh) Date: 2018-03-28 10:00
wrong number of cpu's is reported on some specific platforms.

***

first platform:
server with X4 Intel® Xeon® E5-4620 (8 physical, 16 logical), running 
a 64bit Windows Server 2012 R2 Standard.
results:
os.cpu_count() reports 64 units
psutil.cpu_count(logical=False) reports 32 units
psutil.cpu_count(logical=True) reports 64 units

multiprocessing using concurrent.futures able to fully utilize the server;

***

second platform:
server with X2 Intel® Xeon® Gold 6138 (20 physical, 40 logical), running a 64bit Windows Server 2016 Standard.
results:
os.cpu_count() reports 128 units
psutil.cpu_count(logical=False) reports 20 units
psutil.cpu_count(logical=True) reports 40 units

multiprocessing using concurrent.futures able to utilize only 1/4 of the server's power;
msg314581 - (view) Author: yanir hainick (yanirh) Date: 2018-03-28 10:01
wrong number of cpu's is reported on some specific platforms.

***

first platform:
server with X4 Intel Xeon E5-4620 (8 physical, 16 logical), running 
a 64bit Windows Server 2012 R2 Standard.
results:
os.cpu_count() reports 64 units
psutil.cpu_count(logical=False) reports 32 units
psutil.cpu_count(logical=True) reports 64 units

multiprocessing using concurrent.futures able to fully utilize the server;

***

second platform:
server with X2 Intel Xeon Gold 6138 (20 physical, 40 logical), running a 64bit Windows Server 2016 Standard.
results:
os.cpu_count() reports 128 units
psutil.cpu_count(logical=False) reports 20 units
psutil.cpu_count(logical=True) reports 40 units

multiprocessing using concurrent.futures able to utilize only 1/4 of the server's power;
msg314583 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2018-03-28 11:18
> os.cpu_count() reports 128 units
> psutil.cpu_count(logical=False) reports 20 units
> psutil.cpu_count(logical=True) reports 40 units

You mean os.cpu_count() reports *more* CPUs than exist on the machine? How can that happen?
msg314585 - (view) Author: yanir hainick (yanirh) Date: 2018-03-28 12:19
Yup.
Attaching a screenshot.
msg314587 - (view) Author: Giampaolo Rodola' (giampaolo.rodola) * (Python committer) Date: 2018-03-28 13:09
The difference between os.cpu_count() and psutil.cpu_count() is because one uses GetMaximumProcessorCount() and the other dwNumberOfProcessors.

This is tracked as a bug in psutil bug tracker but it's not fixed yet:
https://github.com/giampaolo/psutil/issues/771

As for Python this is where it was discussed and changed:
https://bugs.python.org/issue30581
https://github.com/python/cpython/commit/c67bae04780f9d7590f9f91b4ee5f31c5d75b3c3

In summary: psutil is wrong and you should rely on os.cpu_count().
msg314589 - (view) Author: yanir hainick (yanirh) Date: 2018-03-28 13:33
Maybe i'm missing something, and would appreciate clarification.

Perhaps psutil is wrong, but it gives an answer that has something to do with the actual situation.

On platform 2, i have 2 Intel Xeon Gold 6138, each with 20 physical processors, 40 logicals.

you are saying i need to rely on os.cpu_count(), which outputs '128'. Can you elaborate on this?

Moreover, when attempting to parallelize on the processors, i reach 25% utilization, which suggests Python 'sees' only one processor group.
msg314590 - (view) Author: Giampaolo Rodola' (giampaolo.rodola) * (Python committer) Date: 2018-03-28 13:37
Oh! So both os.cpu_count() and psutil.cpu_count() are wrong? How do you determine the actual number of logical/physical CPUs on your machine?
msg314591 - (view) Author: yanir hainick (yanirh) Date: 2018-03-28 14:06
Yes. Both are wrong, and os.cpu_count() is completely off.
Regarding how to determine the number of physical/logical cores in my machine - well, not sure what you mean by that. I've attached a screenshot of Windows' system information. Also used 'cpu-z'.

It seems like aside from the os.cpu_count() issue, Python itself has some problem - it 'sees' only 1 CPU group. It is evident from the fact the when parallelizing, utilization level is only 25%.
msg314592 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2018-03-28 14:12
Let's not conflate different issues.  The parallelization issue is distinct from the os.cpu_count() issue (and I'm skeptical Python is at fault there).
msg314596 - (view) Author: yanir hainick (yanirh) Date: 2018-03-28 14:33
Ok, no problem.
Just to be sure i'm doing the right thing - this thread will be dedicated to the os.cpu_count() issue, and i'll open a new issue on the parallelization problem.

makes sense?
msg314597 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2018-03-28 14:34
> Just to be sure i'm doing the right thing - this thread will be dedicated to the os.cpu_count() issue, and i'll open a new issue on the parallelization problem.

Exactly.
msg314599 - (view) Author: Giampaolo Rodola' (giampaolo.rodola) * (Python committer) Date: 2018-03-28 14:53
By re-reading
https://bugs.python.org/issue30581 and
https://github.com/giampaolo/psutil/issues/771#issuecomment-264457333 I now remember why I haven't fixed this issue in psutil yet: because the whole thing (MS APIs and doc basically) is confusing.

GetMaximumProcessorCount (now used by os.cpu_count()) returns "the maximum number of logical processors that a processor group or the system CAN have", not the actual number. That would explain why in OP's case os.cpu_count() returns 128 instead of 40.

As per https://bugs.python.org/issue30581#msg295255 dwNumberOfProcessors wasn't good because it doesn't take multiple processor groups into account (hence the number may be too small) and GetLogicalProcessorInformationEx may be the way to go. This is based on the assumption that os.cpu_count() should report the number of CPUs in the system (including the non-usable ones, like in case of process groups).
msg314609 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2018-03-28 15:38
Adding Chris Wilcox who wrote the original patch using GetMaximumProcessorCount.
msg314620 - (view) Author: Giampaolo Rodola' (giampaolo.rodola) * (Python committer) Date: 2018-03-28 21:04
I created a psutil branch using GetLogicalProcessorInformation() to determine both logical and physical CPUs:
https://github.com/giampaolo/psutil/pull/1257
According to https://stackoverflow.com/questions/31209256 basically all Windows APIs are unreliable and GetLogicalProcessorInformationEx() is what should really be used. 
That is available only starting from Windows 7 though so apparently what we want is GetLogicalProcessorInformationEx() and if not available fallback on GetActiveProcessorCount(ALL_PROCESSOR_GROUPS) which may still report the wrong number of CPUs on 32 bit processes.
msg314631 - (view) Author: Eryk Sun (eryksun) * (Python triager) Date: 2018-03-29 03:56
> if not available fallback on 
> GetActiveProcessorCount(ALL_PROCESSOR_GROUPS)

The fallback for older versions of Windows is dwNumberOfProcessors from GetSystemInfo. This can be removed from 3.7 and 3.8, which no longer support Windows versions prior to Windows 7.

> GetLogicalProcessorInformationEx() is what should really be used. 

GetActiveProcessorCount and GetMaximumProcessorCount are implemented via GetLogicalProcessorInformationEx (i.e. NtQuerySystemInformation, SystemLogicalProcessorAndGroupInformation). They query the RelationGroup information. For ALL_PROCESSOR_GROUPS, they respectively sum the ActiveProcessorCount and MaximumProcessorCount over all groups.

These functions were added in Windows 7 to support the implementation of logical processor groups, which allows up to 64 logical processors per group. Each process is created in a single group, which is assigned round-robin. A thread can call SetThreadGroupAffinity to manually switch to another group.

Apparently someone at Microsoft advised calling GetMaximumProcessorCount (see issue 30581), but I don't follow this decision. Why should os.cpu_count() include CPUs that may or may not come online? Also, on POSIX it reports sysconf(_SC_NPROCESSORS_ONLN), not sysconf(_SC_NPROCESSORS_CONF), so for Windows it should instead call GetActiveProcessorCount. I assume on BSD that HW_NCPU is similar, though I'm not sure for MacOS. Also on MacOS it appears to be deprecated in favor of HW_LOGICALCPU, HW_LOGICALCPU_MAX, HW_PHYSICALCPU, and HW_PHYSICALCPU_MAX.


> which may still report the wrong number of CPUs on 32 bit processes.

32-bit Windows and WOW64 emulation are limited to 32 CPUs. Applications that need more logical processors should be 64-bit
msg314664 - (view) Author: Giampaolo Rodola' (giampaolo.rodola) * (Python committer) Date: 2018-03-29 18:03
That makes sense to me. Thanks for deciphering this.
msg334274 - (view) Author: Cheryl Sabella (cheryl.sabella) * (Python committer) Date: 2019-01-24 00:06
Added #32592 as a dependency since that is removing the Vista code mentioned here.  Once that change is merged, then this would be a simpler change to make.
msg351931 - (view) Author: Zachary Ware (zach.ware) * (Python committer) Date: 2019-09-11 15:15
New changeset aa929273caca2f4e24e3aa9e790272fd4458ad35 by Zachary Ware (Steve Dower) in branch 'master':
bpo-33166: Change os.cpu_count to return active (real) processors (GH-15949)
https://github.com/python/cpython/commit/aa929273caca2f4e24e3aa9e790272fd4458ad35
msg351936 - (view) Author: Zachary Ware (zach.ware) * (Python committer) Date: 2019-09-11 15:20
Thank you for clarifying this muddy topic, Eryk!

(Dropping bpo-32592 dependency; we've done the update in a basically-compatible way.)
msg351956 - (view) Author: miss-islington (miss-islington) Date: 2019-09-11 15:56
New changeset 43ee0e2ca33ae28d37a3dddf10a648895cd46bda by Miss Islington (bot) in branch '3.8':
bpo-33166: Change os.cpu_count to return active (real) processors (GH-15949)
https://github.com/python/cpython/commit/43ee0e2ca33ae28d37a3dddf10a648895cd46bda
History
Date User Action Args
2022-04-11 14:58:59adminsetgithub: 77347
2019-09-11 15:56:16miss-islingtonsetnosy: + miss-islington
messages: + msg351956
2019-09-11 15:20:09zach.waresetstatus: open -> closed
messages: + msg351936

dependencies: - Drop support of Windows Vista and Windows 7
resolution: fixed
stage: patch review -> resolved
2019-09-11 15:15:52miss-islingtonsetpull_requests: + pull_request15612
2019-09-11 15:15:42zach.waresetmessages: + msg351931
2019-09-11 13:54:37steve.dowersetversions: + Python 3.9, - Python 3.7
2019-09-11 13:47:16steve.dowersetkeywords: + patch
stage: patch review
pull_requests: + pull_request15584
2019-01-24 00:08:39cheryl.sabellasetversions: - Python 3.6
2019-01-24 00:06:12cheryl.sabellasetnosy: + cheryl.sabella
dependencies: + Drop support of Windows Vista and Windows 7
messages: + msg334274
2018-03-29 18:03:19giampaolo.rodolasetmessages: + msg314664
2018-03-29 03:56:21eryksunsetnosy: + eryksun
messages: + msg314631
2018-03-28 21:04:21giampaolo.rodolasetmessages: + msg314620
2018-03-28 15:38:42pitrousetmessages: + msg314609
2018-03-28 14:53:12giampaolo.rodolasetmessages: + msg314599
2018-03-28 14:34:11pitrousetmessages: + msg314597
2018-03-28 14:33:36yanirhsetmessages: + msg314596
2018-03-28 14:12:01pitrousetmessages: + msg314592
versions: + Python 3.7, Python 3.8
2018-03-28 14:06:57yanirhsetmessages: + msg314591
2018-03-28 13:37:21giampaolo.rodolasetmessages: + msg314590
2018-03-28 13:33:33yanirhsetmessages: + msg314589
2018-03-28 13:09:05giampaolo.rodolasetmessages: + msg314587
2018-03-28 12:19:32yanirhsetfiles: + Screenshot.png

messages: + msg314585
2018-03-28 11:18:44pitrousetnosy: + pitrou, giampaolo.rodola
messages: + msg314583
2018-03-28 10:01:51yanirhsetmessages: + msg314581
2018-03-28 10:00:50yanirhsetmessages: + msg314580
versions: + Python 3.6
2018-03-28 09:44:42yanirhcreate