bpo-33166: Change os.cpu_count to return active (real) processors (GH-15949)